--- a/nginx/nginx-vite.conf
+++ b/nginx/nginx-vite.conf
@@ -1,31 +1,35 @@
 # nginx/nginx-vite.conf
+
+# This is the HTTP (Port 80) server block
 server {
     listen 80;
     listen [::]:80;
-    server_name sahawatts.com www.sahawatts.com; # IMPORTANT: Replace with your actual domain
+    server_name sahawatts.com www.sahawatts.com;
 
-    # For Let's Encrypt SSL certificate challenges
     location /.well-known/acme-challenge/ {
-        # This root will be mounted by certbot container, not Nginx's default
         root /var/www/certbot;
     }
 
-    # Redirect all HTTP requests to HTTPS
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html;
+
     location / {
         return 301 https://$host$request_uri;
     }
 }
 
+# This is the HTTPS (Port 443) server block
+# IMPORTANT: This block is for serving your Vite app over HTTPS
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name sahawatts.com www.sahawatts.com; # IMPORTANT: Replace with your actual domain
+     listen 443 ssl http2;
+     listen [::]:443 ssl http2;
+     server_name sahawatts.com www.sahawatts.com;
 
-    # SSL Configuration - Certbot will create these files
+    # SSL Configuration
     ssl_certificate /etc/letsencrypt/live/sahawatts.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/sahawatts.com/privkey.pem;
     ssl_trusted_certificate /etc/letsencrypt/live/sahawatts.com/chain.pem;
-    # ssl_dhparam /etc/nginx/dhparam.pem; # Optional: Uncomment if you generate a strong DH param
 
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
@@ -33,13 +37,9 @@ server {
     ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
     ssl_prefer_server_ciphers on;
 
-    # Root directory for your static files (where your Vite 'dist' content will be)
     root /usr/share/nginx/html;
 
-    # Default files to serve if a directory is requested
     index index.html index.htm;
 
-    # Important for SPAs like React: If a file isn't found, try index.html
-    # This handles client-side routing (e.g., /about, /contact)
     try_files $uri $uri/ /index.html;
 }
